--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -14,22 +14,22 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:layout_marginRight="20dp"
         android:layout_centerHorizontal="true">
 
-        <com.devspark.robototextview.widget.RobotoTextView
-            android:id="@+id/textView4"
-            style="@style/TextViewMainPage"
-            android:text="Ciclo: " />
+        <!--<com.devspark.robototextview.widget.RobotoTextView-->
+        <!--android:id="@+id/textView4"-->
+        <!--style="@style/TextViewMainPage"-->
+        <!--android:text="Ciclo: " />-->
 
-        <Spinner
-            android:id="@+id/spinnerCycleSelector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/drop_down_example"
-            android:prompt="@string/label_select_cycle" />
+        <!--<Spinner-->
+        <!--android:id="@+id/spinnerCycleSelector"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:entries="@array/drop_down_example"-->
+        <!--android:prompt="@string/label_select_cycle" />-->
     </LinearLayout>
 
     <LinearLayout
@@ -39,8 +39,11 @@
         android:layout_alignEnd="@+id/buttonFBOpenGraph"
         android:layout_alignRight="@+id/buttonFBOpenGraph"
         android:layout_below="@+id/linearLayout2"
-        android:layout_margin="20dp"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp" />
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -55,7 +58,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="16dp"
             android:orientation="vertical">
 
 
@@ -74,7 +77,8 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textView3"
                 style="@style/TextViewMainPageLabel"
-                android:text="Consumo Total:" />
+                android:text="Consumo Total:"
+                android:layout_marginTop="10dp" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewTotalBalance"
@@ -84,7 +88,8 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textView2"
                 style="@style/TextViewMainPageLabel"
-                android:text="Realizada el dia:" />
+                android:text="Realizada el dia:"
+                android:layout_marginTop="10dp" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewLastReadingDate"
