--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navDrawerContainer"
-    android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="48dp"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageButtonDrawerIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@null"
-        android:src="@drawable/ic_notifications_black_48dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        android:background="@null"
+        android:src="@drawable/ic_notifications_black_48dp" />
 
     <com.devspark.robototextview.widget.RobotoTextView
         android:id="@+id/textViewDrawer"
@@ -23,13 +24,18 @@
 
     <!--We might want to add counters to the menu in the future, we leave this commented-->
 
-    <!--    <TextView android:id="@+id/counter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/counter_bg"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="8dp"
-            android:textColor="@color/counter_text_color"/>-->
+    <com.devspark.robototextview.widget.RobotoTextView
+        android:id="@+id/counter"
+        app:typeface="roboto_bold"
+        android:textSize="22sp"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/whiteWater"
+        android:text="4"
+        android:background="@drawable/ic_lens_orange600_24dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:autoText="false"
+        android:layout_marginLeft="16sp" />
 
 </LinearLayout>
