--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -107,18 +107,6 @@
     <!--android:id="@+id/buttonResetValuesForCycle"-->
     <!--android:layout_gravity="center_horizontal" />-->
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/fabPay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_payment_white_24dp"
-            android:layout_alignBottom="@+id/card_view"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="-32dp"
-            android:layout_marginRight="20dp"
-            android:elevation="7dp"
-            fab:fab_colorNormal="@color/colorPrimary"
-            fab:fab_colorPressed="@color/colorPrimaryDarker" />
 
     <!--Scan button-->
         <com.melnykov.fab.FloatingActionButton
@@ -126,13 +114,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_camera_alt_white_24dp"
-            android:elevation="7dp"
             fab:fab_colorNormal="@color/colorPrimary"
             fab:fab_colorPressed="@color/colorPrimaryDarker"
             android:layout_alignBottom="@+id/card_view"
-            android:layout_alignLeft="@+id/fabPay"
-            android:layout_alignStart="@+id/fabPay"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginBottom="50dp" />
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fabPay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_payment_white_24dp"
+        fab:fab_colorNormal="@color/colorPrimary"
+        fab:fab_colorPressed="@color/colorPrimaryDarker"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/fabScan"
+        android:layout_marginTop="86dp" />
 
     <!--<Button-->
     <!--android:id="@+id/buttonPay"-->
