--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fourtails.usuariolecturista.MainDrawerActivity">
+    tools:context="com.fourtails.usuariolecturista.MainActivity">
 
-    <!-- As the main content view, the view below consumes the entire
+<!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
     <RelativeLayout
         android:layout_width="match_parent"
