--- a/app/src/main/res/drawable/list_item_bg_normal.xml
+++ b/app/src/main/res/drawable/list_item_bg_normal.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/teal_locky"
-        android:endColor="@color/teal_locky"
+        android:startColor="@color/drawerOver"
+        android:endColor="@color/drawerOver"
         android:angle="90" />
 </shape>
