--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,22 @@
         <item name="typeface">roboto_medium</item>
     </style>
 
+    <style name="TextViewPromotionsLabel">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="typeface">roboto_bold</item>
+    </style>
+
+    <style name="TextViewPromotionsContent">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/blackWater</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="typeface">roboto_medium</item>
+    </style>
+
     <style name="TextViewDrawerMedium">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/blackWater</item>
