--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,22 @@
         <item name="typeface">roboto_medium</item>
     </style>
 
+    <style name="TextViewNotificationsLabel">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/blackWater</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="typeface">roboto_medium</item>
+    </style>
+
+    <style name="TextViewNotificationsContent">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/greyWater</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="typeface">roboto_medium</item>
+    </style>
+
     <style name="TextViewDrawerMedium">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/blackWater</item>
