--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,6 +73,22 @@
         <item name="typeface">roboto_medium</item>
     </style>
 
+    <style name="TextViewIntroTitle">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="typeface">roboto_bold</item>
+    </style>
+
+    <style name="TextViewIntroDesc">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/blackWater</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="typeface">roboto_medium</item>
+    </style>
+
     <style name="RobotoButton">
         <item name="typeface">roboto_medium</item>
         <item name="android:textColor">@color/whiteWater</item>
