--- a/app/src/main/res/drawable/custom_button_blue.xml
+++ b/app/src/main/res/drawable/custom_button_blue.xml
@@ -2,7 +2,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <corners android:radius="2dp" />
-            <solid android:color="@color/com_facebook_blue" />
+            <solid android:color="@color/blue_fb" />
         </shape>
     </item>
 </selector>
