--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -13,13 +13,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="false"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
         android:layout_marginRight="20dp"
-        android:layout_centerHorizontal="true">
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
-        <!--<com.devspark.robototextview.widget.RobotoTextView-->
+    <!--<com.devspark.robototextview.widget.RobotoTextView-->
         <!--android:id="@+id/textView4"-->
         <!--style="@style/TextViewMainPage"-->
         <!--android:text="Ciclo: " />-->
@@ -32,28 +32,35 @@
         <!--android:prompt="@string/label_select_cycle" />-->
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layoutBalanceContainer"
-        android:layout_width="fill_parent"
+    <com.db.chart.view.LineChartView xmlns:chart="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/linechart"
+        android:layout_width="match_parent"
         android:layout_height="175dp"
-        android:layout_alignEnd="@+id/buttonFBOpenGraph"
-        android:layout_alignRight="@+id/buttonFBOpenGraph"
-        android:layout_below="@+id/linearLayout2"
-        android:orientation="vertical"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="7dp"
+        android:layout_weight=".30"
+        android:background="#00BBA7"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        chart:chart_axisBorderSpacing="0dp"
+        chart:chart_axisColor="@color/axis"
+        chart:chart_labelColor="@color/label"
+        chart:chart_typeface="Roboto-Regular.ttf" />
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/buttonFBOpenGraph"
-        android:layout_alignRight="@+id/buttonFBOpenGraph"
-        android:layout_below="@+id/layoutBalanceContainer"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        android:layout_below="@+id/linechart"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -71,14 +78,14 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewBillingDate"
                 style="@style/TextViewMainPage"
-                android:text="26 de Nov 2014"
+                android:text="26 de Febrero 2015"
                 android:textIsSelectable="true" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textView3"
                 style="@style/TextViewMainPageLabel"
-                android:text="Consumo Total:"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:text="Consumo Total:" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewTotalBalance"
@@ -88,13 +95,13 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textView2"
                 style="@style/TextViewMainPageLabel"
-                android:text="Realizada el dia:"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:text="Realizada el dia:" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewLastReadingDate"
                 style="@style/TextViewMainPage"
-                android:text="2 de Nov 2014" />
+                android:text="2 de Febrero 2015" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -109,31 +116,31 @@
 
 
     <!--Scan button-->
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/fabScan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_camera_alt_white_24dp"
-            fab:fab_colorNormal="@color/colorPrimary"
-            fab:fab_colorPressed="@color/colorPrimaryDarker"
-            android:layout_alignBottom="@+id/card_view"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="50dp"
-            android:layout_marginRight="20dp" />
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fabScan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/card_view"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/ic_camera_alt_white_24dp"
+        fab:fab_colorNormal="@color/colorPrimary"
+        fab:fab_colorPressed="@color/colorPrimaryDarker" />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fabPay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/fabScan"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="86dp"
         android:src="@drawable/ic_payment_white_24dp"
         fab:fab_colorNormal="@color/colorPrimary"
-        fab:fab_colorPressed="@color/colorPrimaryDarker"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/fabScan"
-        android:layout_marginTop="86dp"
-        android:layout_marginRight="20dp" />
+        fab:fab_colorPressed="@color/colorPrimaryDarker" />
 
     <!--<Button-->
     <!--android:id="@+id/buttonPay"-->
