--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -4,16 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navDrawerContainer"
     android:layout_width="wrap_content"
-    android:layout_height="48dp"
+    android:layout_height="56dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageButtonDrawerIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="36dp"
         android:background="@null"
         android:src="@drawable/ic_notifications_black_48dp" />
 
@@ -27,15 +27,15 @@
     <com.devspark.robototextview.widget.RobotoTextView
         android:id="@+id/counter"
         app:typeface="roboto_bold"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:layout_alignParentRight="true"
         android:textColor="@color/whiteWater"
         android:text="4"
         android:background="@drawable/counter"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:autoText="false"
-        android:layout_marginLeft="16sp" />
+        android:layout_marginLeft="36dp"
+        android:gravity="center" />
 
 </LinearLayout>
