--- a/app/src/main/res/layout/fragment_consume.xml
+++ b/app/src/main/res/layout/fragment_consume.xml
@@ -32,35 +32,40 @@
         <!--android:prompt="@string/label_select_cycle" />-->
     </LinearLayout>
 
-    <com.db.chart.view.LineChartView xmlns:chart="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/linechart"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="175dp"
-        android:layout_marginBottom="2dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginTop="7dp"
-        android:layout_weight=".30"
-        android:background="#00BBA7"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
-        chart:chart_axisBorderSpacing="0dp"
-        chart:chart_axisColor="@color/axis"
-        chart:chart_labelColor="@color/label"
-        chart:chart_typeface="Roboto-Regular.ttf" />
+        android:layout_height="wrap_content"
+        android:id="@+id/linechartCardView"
+        android:layout_margin="10dp">
+
+        <com.db.chart.view.LineChartView xmlns:chart="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/linechart"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:layout_weight=".30"
+            chart:chart_axisBorderSpacing="0dp"
+            chart:chart_axisColor="@color/axis"
+            chart:chart_labelColor="@color/label"
+            chart:chart_typeface="Roboto-Regular.ttf"
+            android:layout_margin="10dp"
+            android:background="@color/colorPrimary" />
+    </android.support.v7.widget.CardView>
+
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         card_view:cardCornerRadius="4dp"
-        android:layout_below="@+id/linechart"
+        android:layout_below="@+id/linechartCardView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp">
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:transitionName="@string/transitionFirstCardView">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -72,7 +77,7 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textView"
                 style="@style/TextViewMainPageLabel"
-                android:text="Fecha Limite:"
+                android:text="@string/consumeLabelsLimitDate"
                 android:textIsSelectable="false" />
 
             <com.devspark.robototextview.widget.RobotoTextView
@@ -85,7 +90,7 @@
                 android:id="@+id/textView3"
                 style="@style/TextViewMainPageLabel"
                 android:layout_marginTop="10dp"
-                android:text="Consumo Total:" />
+                android:text="@string/consumeLabelsTotalAmount" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewTotalBalance"
@@ -96,7 +101,7 @@
                 android:id="@+id/textView2"
                 style="@style/TextViewMainPageLabel"
                 android:layout_marginTop="10dp"
-                android:text="Realizada el dia:" />
+                android:text="@string/consumeLabelsLastReadingDay" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewLastReadingDate"
