--- a/app/src/main/res/layout/fragment_pay_options.xml
+++ b/app/src/main/res/layout/fragment_pay_options.xml
@@ -6,6 +6,64 @@
     android:orientation="vertical"
     tools:context="com.fourtails.usuariolecturista.PayOptionsFragment">
 
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp"
+        android:layout_below="@+id/linechartCardView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:transitionName="@string/transitionFirstCardView">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="vertical">
+
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textView"
+                style="@style/TextViewMainPageLabel"
+                android:text="@string/consumeLabelsLimitDate"
+                android:textIsSelectable="false" />
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textViewBillingDate"
+                style="@style/TextViewMainPage"
+                android:text="26 de Febrero 2015"
+                android:textIsSelectable="true" />
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textView3"
+                style="@style/TextViewMainPageLabel"
+                android:layout_marginTop="10dp"
+                android:text="@string/consumeLabelsTotalAmount" />
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textViewTotalBalance"
+                style="@style/TextViewMainPage"
+                android:text="$100.00" />
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textView2"
+                style="@style/TextViewMainPageLabel"
+                android:layout_marginTop="10dp"
+                android:text="@string/consumeLabelsLastReadingDay" />
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textViewLastReadingDate"
+                style="@style/TextViewMainPage"
+                android:text="2 de Febrero 2015" />
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
     <com.devspark.robototextview.widget.RobotoTextView
         style="@style/TextViewMainPageLabel"
@@ -43,7 +101,8 @@
             android:layout_gravity="center_horizontal"
             android:text="Tarjeta xxxx-1234"
             android:textColor="@color/whiteWater"
-            android:background="@drawable/img_visa2" />
+            android:background="@drawable/img_visa2"
+            android:transitionName="transitionCardToPay" />
 
     </LinearLayout>
 
